[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68" ]

[project]
name = "hellbox-dsig"
version = "0.1.0"
description = "DSIG-related job for hellbox."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Jack Jennings", email = "jack@standard-library.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Plugins",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "fonttools",
  "hellbox",
]
urls.Homepage = "https://github.com/hellboxpy/hellbox-dsig"

[dependency-groups]
dev = [
  "mdformat",
  "pyproject-fmt>=2.21.2",
  "pytest>=9.0.3",
  "ruff>=0,<1",
  "ty>=0.0.36",
]

[tool.setuptools]
packages.find.where = [ "src" ]
packages.find.namespaces = true
packages.find.exclude = [ "hellbox", "hellbox.jobs" ]

[tool.uv]
sources.hellbox = { git = "https://github.com/hellboxpy/hellbox.git" }

[tool.ty]
overrides = [ { include = [ "tests/**" ], rules.unresolved-import = "ignore" } ]
